--- a/GUvrs/MainPage.xaml
+++ b/GUvrs/MainPage.xaml
@@ -13,7 +13,26 @@
                 Padding="30,0">
 
                 <Label
-                    Padding="25"/>
+                    Padding="45"/>
+
+                <StackLayout Orientation="Horizontal" 
+                             Spacing="5">
+                    <Label
+                        Text="Game ID: "
+                        FontSize="18"
+                        TextColor="Black"
+                        HorizontalOptions="Center" />
+
+                    <Label
+                        x:Name="GameID"
+                        Text=""
+                        FontSize="18"
+                        TextColor="Black"
+                        HorizontalOptions="Center" />
+                </StackLayout>
+
+                <Label
+                    Padding="15" />
 
                 <StackLayout Orientation="Horizontal" 
                              Spacing="5">
@@ -57,25 +76,6 @@
                 <Label
                     Padding="15" />
 
-                <Button
-                    x:Name="Reset"
-                    MinimumWidthRequest="200"
-                    Text="Reset"
-                    TextColor="White"
-                    BorderColor="White"
-                    BackgroundColor="Black"
-                    Clicked="OnResetClick"
-                    HorizontalOptions="Center">
-
-                    <Button.GestureRecognizers>
-                        <PointerGestureRecognizer PointerEntered="OnShowHandPointer"
-                                                  PointerExited="OnHideHandPointer" />
-                        </Button.GestureRecognizers>
-                </Button>
-
-                <Label
-                    Padding="15"/>
-
                 <StackLayout Orientation="Horizontal" 
                              Spacing="5">
                     <Label
@@ -114,22 +114,6 @@
                         </Label.GestureRecognizers>
                     </Label>
                 </StackLayout>
-
-                <Label
-                    Padding="15"/>
-
-                <Label
-                    MaximumWidthRequest="310"
-                    HorizontalOptions="Center">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="Warning: This is a BETA edition. It may be subject to errors, or issues. Please report any you find to github."
-                                  TextColor="Black"
-                                  FontSize="14"
-                                  FontAttributes="Italic"/>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
             </StackLayout>
         </VerticalStackLayout>
     </ScrollView>
