--- a/GUvrs/MainPage.xaml
+++ b/GUvrs/MainPage.xaml
@@ -28,7 +28,21 @@
                         Text=""
                         FontSize="18"
                         TextColor="Black"
+                        MaximumWidthRequest="350"
                         HorizontalOptions="Center" />
+
+                    <ImageButton
+                         x:Name="CopyGameID"
+                         Source="copyicon.png"
+                         IsVisible="false"
+                         HorizontalOptions="Start"
+                         VerticalOptions="Start"
+                         WidthRequest="24"
+                         MaximumWidthRequest="24"
+                         MinimumWidthRequest="24"
+                         MaximumHeightRequest="24"
+                         MinimumHeightRequest="24"
+                         HeightRequest="24" />
                 </StackLayout>
 
                 <Label
@@ -71,6 +85,19 @@
                                                       PointerExited="OnHideHandPointer" />
                         </Label.GestureRecognizers>
                     </Label>
+
+                    <ImageButton
+                         x:Name="CopyPlayerID"
+                         Source="copyicon.png"
+                         IsVisible="false"
+                         HorizontalOptions="Start"
+                         VerticalOptions="Start"
+                         WidthRequest="24"
+                         MaximumWidthRequest="24"
+                         MinimumWidthRequest="24"
+                         MaximumHeightRequest="24"
+                         MinimumHeightRequest="24"
+                         HeightRequest="24" />
                 </StackLayout>
 
                 <Label
@@ -113,6 +140,19 @@
                                                       PointerExited="OnHideHandPointer" />
                         </Label.GestureRecognizers>
                     </Label>
+
+                    <ImageButton
+                         x:Name="CopyOpponentID"
+                         Source="copyicon.png"
+                         IsVisible="false"
+                         HorizontalOptions="Start"
+                         VerticalOptions="Start"
+                         WidthRequest="24"
+                         MaximumWidthRequest="24"
+                         MinimumWidthRequest="24"
+                         MaximumHeightRequest="24"
+                         MinimumHeightRequest="24"
+                         HeightRequest="24" />
                 </StackLayout>
             </StackLayout>
         </VerticalStackLayout>
