--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -1,4 +1,26 @@
-﻿    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+﻿    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+    <script type="text/javascript">
+        document.querySelector('.settings-btn').addEventListener('click', function () {
+            document.getElementById('settings-overlay').style.display = 'block';
+        });
+
+        document.getElementById('cancel-settings').addEventListener('click', function () {
+            document.getElementById('settings-overlay').style.display = 'none';
+        });
+
+        document.oncontextmenu = function () {
+            return false;
+        };
+
+        function guvrs_set_value(name, value) {
+            document.getElementById(name).innerHTML = value;
+        }
+
+        function guvrs_set_progress(name, value) {
+            document.getElementById(name).style.width = value + "%";
+        }
+    </script>
   </body>
 
 </html>
