--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div class="header">
-        GUvrs - v3.0.0
+        Game Id: {{ GUVRS_GAME_ID }}
         <button class="settings-btn"><i title="Click to open settings window" class="fas fa-cog"></i></button>
     </div>
 
