Save button should close model dialog

--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -9,6 +9,10 @@
             document.getElementById('settings-overlay').style.display = 'none';
         });
 
+        document.getElementById('save-settings').addEventListener('click', function () {
+            document.getElementById('settings-overlay').style.display = 'none';
+        });
+
         document.oncontextmenu = function () {
             return false;
         };
