--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -18,11 +18,7 @@
         };
 
         function guvrs_set_value(name, value) {
-            document.getElementById(name).innerHTML = value;
-        }
-
-        function guvrs_set_progress(name, value) {
-            document.getElementById(name).style.width = value + "%";
+            document.getElementById(name).innerText = value;
         }
     </script>
   </body>
