add local render cache for values, add auto updating watch for values

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div class="header">
-        Game Id: {{ GUVRS_GAME_ID }}
+        Game Id: <span id="GUVRS_GAME_ID">{{ GUVRS_GAME_ID }}</span>
         <button class="settings-btn"><i title="Click to open settings window" class="fas fa-cog"></i></button>
     </div>
 
