Add code for invoking events by navigation using guvrs:// from inside javascript to C#

--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -35,6 +35,7 @@
 
         document.getElementById('save-settings').addEventListener('click', function () {
             document.getElementById('settings-overlay').style.display = 'none';
+            location.href = "guvrs://save-settings?key1=value1&key2=value2";
         });
 
         document.oncontextmenu = function () {
