Add stateful settings for auto-open, and theme (only 1 theme for now)

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -29,7 +29,7 @@
         <div class="setting-row">
             <label for="dropdown-setting">Theme:</label>
             <select id="dropdown-setting">
-                <option value="option1">black-orange</option>
+                <option value="black-orange">black-orange</option>
             </select>
         </div>
         <div class="setting-row">
