add game mode support, and open profile with game mode support.

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -21,6 +21,10 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        Report any issues to <a title="Click to report any errors to github.com" href="guvrs://report-issue">github</a>
+    </div>
 </div>
 
 <div class="overlay" id="settings-overlay">
@@ -42,7 +46,6 @@
             </div>
         </div>
 
-        <!-- Buttons -->
         <div class="button-row">
             <button id="save-settings">Save</button>
             <button id="cancel-settings">Cancel</button>
