--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -1,8 +1,4 @@
-﻿    <div class="footer">
-        Report any issues to <a title="Click to report any errors to github.com" href="guvrs://report-issue">github</a>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+﻿    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
     <script type="text/javascript">
         const values = {};
         const events = {};
