Add player rating display.

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -11,6 +11,10 @@
                 <span class="data-label">Guid:</span>
                 <span class="data-value"><a id="GUVRS_PLAYER_GUID" title="Click to open deck in gudecks.com" class="guid" href="javascript:void(0)">{{ GUVRS_PLAYER_GUID }}</a> <i title="Click to copy guid to clipboard" class="fas fa-copy copy-icon"></i></span>
             </div>
+            <div class="data-row">
+                <span class="data-label">Rating:</span>
+                <span class="data-value" id="GUVRS_PLAYER_RATING">{{ GUVRS_PLAYER_RATING }}</span>
+            </div>
         </div>
 
         <div class="pane" id="player2">
@@ -18,6 +22,10 @@
             <div class="data-row">
                 <span class="data-label">Guid:</span>
                 <span class="data-value"><a id="GUVRS_OPPONENT_GUID" title="Click to open deck in gudecks.com" class="guid" href="javascript:void(0)">{{ GUVRS_OPPONENT_GUID }}</a> <i title="Click to copy guid to clipboard" class="fas fa-copy copy-icon"></i></span>
+            </div>
+            <div class="data-row">
+                <span class="data-label">Rating:</span>
+                <span class="data-value" id="GUVRS_OPPONENT_RATING">{{ GUVRS_OPPONENT_RATING }}</span>
             </div>
         </div>
     </div>
