Add gu api player rank information to client.

--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -58,10 +58,16 @@
         watch("GUVRS_PLAYER_NAME", (key, value) => update(key, value));
         watch("GUVRS_PLAYER_GUID", (key, value) => updateWithHref(key, value));
         watch("GUVRS_PLAYER_RATING", (key, value) => update(key, value));
+        watch("GUVRS_PLAYER_WINPOINTS", (key, value) => update(key, value));
+        watch("GUVRS_PLAYER_LOSSPOINTS", (key, value) => update(key, value));
+        watch("GUVRS_PLAYER_SAFELINE", (key, value) => update(key, value));
 
         watch("GUVRS_OPPONENT_NAME", (key, value) => update(key, value))
         watch("GUVRS_OPPONENT_GUID", (key, value) => updateWithHref(key, value));
-        watch("GUVRS_OPPONENT_RATING", (key, value) => update(key, value))
+        watch("GUVRS_OPPONENT_RATING", (key, value) => update(key, value));
+        watch("GUVRS_OPPONENT_WINPOINTS", (key, value) => update(key, value));
+        watch("GUVRS_OPPONENT_LOSSPOINTS", (key, value) => update(key, value));
+        watch("GUVRS_OPPONENT_SAFELINE", (key, value) => update(key, value));
     </script>
   </body>
 
