--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -15,6 +15,18 @@
                 <span class="data-label">Rating:</span>
                 <span class="data-value" id="GUVRS_PLAYER_RATING">{{ GUVRS_PLAYER_RATING }}</span>
             </div>
+            <div class="data-row">
+                <span class="data-label">Win Points:</span>
+                <span class="data-value" id="GUVRS_PLAYER_WINPOINTS">{{ GUVRS_PLAYER_WINPOINTS }}</span>
+            </div>
+            <div class="data-row">
+                <span class="data-label">Loss Points:</span>
+                <span class="data-value" id="GUVRS_PLAYER_LOSSPOINTS">{{ GUVRS_PLAYER_LOSSPOINTS }}</span>
+            </div>
+            <div class="data-row">
+                <span class="data-label">Safe Line:</span>
+                <span class="data-value" id="GUVRS_PLAYER_SAFELINE">{{ GUVRS_PLAYER_SAFELINE }}</span>
+            </div>
         </div>
 
         <div class="pane" id="player2">
@@ -26,6 +38,18 @@
             <div class="data-row">
                 <span class="data-label">Rating:</span>
                 <span class="data-value" id="GUVRS_OPPONENT_RATING">{{ GUVRS_OPPONENT_RATING }}</span>
+            </div>
+            <div class="data-row">
+                <span class="data-label">Win Points:</span>
+                <span class="data-value" id="GUVRS_OPPONENT_WINPOINTS">{{ GUVRS_OPPONENT_WINPOINTS }}</span>
+            </div>
+            <div class="data-row">
+                <span class="data-label">Loss Points:</span>
+                <span class="data-value" id="GUVRS_OPPONENT_LOSSPOINTS">{{ GUVRS_OPPONENT_LOSSPOINTS }}</span>
+            </div>
+            <div class="data-row">
+                <span class="data-label">Safe Line:</span>
+                <span class="data-value" id="GUVRS_OPPONENT_SAFELINE">{{ GUVRS_OPPONENT_SAFELINE }}</span>
             </div>
         </div>
     </div>
